--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -26,7 +26,7 @@ try {
         }
     }
     stage("Build") {
-        onSlurmResource(partition: "compile") {
+        onSlurmResource(partition: "jenkins") {
             inSingularity(app: "visionary-simulation") {
                 jesh "bash -x .ci/stages/build.sh"
             }
@@ -42,7 +42,7 @@ try {
         }
     }
     stage("Run tests") {
-        onSlurmResource(partition: "compile") {
+        onSlurmResource(partition: "jenkins") {
             inSingularity(app: "visionary-dev-tools") {
                 jesh "bash -x .ci/stages/test.sh"
                 archiveArtifacts("tests/*.png")
