Jenkinsfile: Build model-visionary-nest
* Build model-visionary-nest prior to launching sbs tests

* Support "Depends-On:"-tag in commit message to check out an unmerged
  changeset from model-visionary-nest

* Use locally compiled visionary-nest for tests

Change-Id: I1cdc0fa553d311a1e45994d7e24cb1be68e8e342

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -41,6 +41,18 @@ try {
                      unstableTotalAll: '0'
         }
     }
+    stage("Build model-visionary-nest") {
+        runOnSlave(label: "frontend") {
+            inSingularity(app: "visionary-simulation") {
+                jesh "bash -x .ci/stages/visionary-nest-checkout.sh"
+            }
+        }
+        onSlurmResource(partition: "jenkins") {
+            inSingularity(app: "visionary-simulation") {
+                jesh "cd model-visionary-nest && bash -x .ci/stages/build.sh"
+            }
+        }
+    }
     stage("Run tests") {
         onSlurmResource(partition: "jenkins") {
             inSingularity(app: "visionary-dev-tools") {
