Adjust CI to newest container changes
* check flake8 in visionary-simulation
* dev-tools is already at python 3 - sbs is not
* disable tests for run in subprocess because they halt testing

Change-Id: I2b31e90eab581269f3bdff08688e31a227f61f3f

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -14,7 +14,7 @@ try {
     }
     stage("Flake8 check") {
         runOnSlave(label: "frontend") {
-            inSingularity(app: "visionary-dev-tools") {
+            inSingularity(app: "visionary-simulation") {
                 jesh "flake8 --tee --output flake8.log"
             }
             step([$class: 'WarningsPublisher',
@@ -55,13 +55,13 @@ try {
     }
     stage("Run tests") {
         onSlurmResource(partition: "jenkins") {
-            inSingularity(app: "visionary-dev-tools") {
+            inSingularity {
                 jesh "bash -x .ci/stages/test.sh"
-                archiveArtifacts("tests/*.png")
-                step([$class: 'XUnitBuilder',
-                      thresholds: [[$class: 'FailedThreshold', unstableThreshold:'0']],
-                      tools: [[$class: 'JUnitType', pattern: 'tests/test_results.xml']]])
             }
+            archiveArtifacts("tests/*.png")
+            step([$class: 'XUnitBuilder',
+                  thresholds: [[$class: 'FailedThreshold', unstableThreshold:'0']],
+                  tools: [[$class: 'JUnitType', pattern: 'tests/test_results.xml']]])
         }
     }
 } finally {
