Jenkinsfile: Adapt to c/11506
Change-Id: I6c6e37a6051d9f8c08e93073a201d0d27a6b3924

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -54,7 +54,7 @@ try {
                 jesh "bash -x .ci/stages/test.sh"
             }
             archiveArtifacts("tests/*.png")
-            step([$class: 'XUnitBuilder',
+            step([$class: 'XUnitPublisher',
                   thresholds: [[$class: 'FailedThreshold', unstableThreshold:'0']],
                   tools: [[$class: 'JUnitType', pattern: 'tests/test_results.xml']]])
         }
